DEX-115 Use native implementation for LevelDB in tests